v1.0.0/modules/schema/pages/class/NetworkModelProjectChangeVersion.adoc
= `NetworkModelProjectChangeVersion`
:toclevels: 4


+++Describes the status and the planned implementation of the associated change set into the as-built model.    New instances of this class with new identity are instantiated upon changes to the content of this class or changes to the associated change set.  Instances of this class are considered immutable.  The case audit trail can reference this immutable data to exactly reproduce a case.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:NetworkModelProjectChangeVersion`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`NetworkModelProjectChangeVersion`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
NetworkModelProjectChangeVersion {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



NetworkModelProjectChange {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



NetworkModelProjectChangeVersion {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



NetworkModelProjectState {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



NetworkModelProjectChangeVersion {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




NetworkModelProjectChangeVersion -> ChangeSet: ChangeSet


NetworkModelProjectChangeVersion -> NetworkModelProjectChange: NetworkModelProjectChange


NetworkModelProjectChangeVersion -> NetworkModelProjectChangeVersion: SupercededBy


NetworkModelProjectChangeVersion -> NetworkModelProjectState: NetworkModelProjectState


NetworkModelProjectChangeVersion -> NetworkModelProjectChangeVersion: Supercedes


NetworkModelProjectChangeVersion -> DiagramObject: DiagramObjects


NetworkModelProjectChangeVersion -> InstanceSet: InstanceSet


NetworkModelProjectChangeVersion -> Name: Names


NetworkModelProjectChangeVersion -> ChangeSetMember: PropertiesCIMDataObject


NetworkModelProjectChangeVersion -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<NetworkModelProjectChange,`NetworkModelProjectChange`>>
| 1
| xref::class/NetworkModelProjectChange.adoc[`NetworkModelProjectChange`]
| +++The persistent network model project change to which this version applies.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ChangeSet,`ChangeSet`>>
| 0..1
| xref::class/ChangeSet.adoc[`ChangeSet`]
| +++The details of model changes for this project.   The change set should have a new identifier if it changes.+++

| <<NetworkModelProjectState,`NetworkModelProjectState`>>
| 0..1
| xref::class/NetworkModelProjectState.adoc[`NetworkModelProjectState`]
| +++The state of this network model project version.+++

| <<SupercededBy,`SupercededBy`>>
| 0..1
| xref::class/NetworkModelProjectChangeVersion.adoc[`NetworkModelProjectChangeVersion`]
| +++The project version that will supercede this project version.+++

| <<Supercedes,`Supercedes`>>
| 0..1
| xref::class/NetworkModelProjectChangeVersion.adoc[`NetworkModelProjectChangeVersion`]
| +++Project version that is being superceded.+++

| <<comment,`comment`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++A user provided comment describing the changes in this version from the previous version.+++

| <<effectiveDateTime,`effectiveDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The date/time the change set is included in the model.+++

| <<timeStamp,`timeStamp`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The date/time this version was finalized and thus made immutable.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ChangeSet]
=== `ChangeSet`
+++The details of model changes for this project.   The change set should have a new identifier if it changes.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectChangeVersion.ChangeSet`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSet.adoc[`ChangeSet`]


|===

//[discrete]
[#comment]
=== `comment`
+++A user provided comment describing the changes in this version from the previous version.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectChangeVersion.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#effectiveDateTime]
=== `effectiveDateTime`
+++The date/time the change set is included in the model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectChangeVersion.effectiveDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#NetworkModelProjectChange]
=== `NetworkModelProjectChange`
+++The persistent network model project change to which this version applies.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectChangeVersion.NetworkModelProjectChange`
| Cardinality
| 1
| Type
| xref::class/NetworkModelProjectChange.adoc[`NetworkModelProjectChange`]


|===

//[discrete]
[#NetworkModelProjectState]
=== `NetworkModelProjectState`
+++The state of this network model project version.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectChangeVersion.NetworkModelProjectState`
| Cardinality
| 0..1
| Type
| xref::class/NetworkModelProjectState.adoc[`NetworkModelProjectState`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#SupercededBy]
=== `SupercededBy`
+++The project version that will supercede this project version.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectChangeVersion.SupercededBy`
| Cardinality
| 0..1
| Type
| xref::class/NetworkModelProjectChangeVersion.adoc[`NetworkModelProjectChangeVersion`]


|===

//[discrete]
[#Supercedes]
=== `Supercedes`
+++Project version that is being superceded.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectChangeVersion.Supercedes`
| Cardinality
| 0..1
| Type
| xref::class/NetworkModelProjectChangeVersion.adoc[`NetworkModelProjectChangeVersion`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#timeStamp]
=== `timeStamp`
+++The date/time this version was finalized and thus made immutable.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectChangeVersion.timeStamp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===


